--- a/src/App.css
+++ b/src/App.css
@@ -11,28 +11,31 @@
 .company{
   display: flex;
   /* margin: 20px; */
-  width: 28%;
+  width: 30%;
 }
 .company img{
   height: 70px;
+  margin-left: 20px;
 }
-.flex-container{
+/* .flex-container{
   background-image: url('./assets/background-1.jpg');
-  /* filter: blur(8px); */
   height: 100vh;
 	background-repeat: no-repeat;
 	background-size: cover;
 
-}
-.container{
+} */
+.container-nav{
+  height: 100px;
   display: flex;
+  width: 100%;
+  background-color: #038ae467;
 }
 
 .tools{
   display: flex;
   justify-content: space-around;
   width: 37%;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 .tools a{
   color: white;
@@ -56,35 +59,24 @@
   border-radius: 30px;
   height: 30px;
 }
-#search-button img{
-  width: 10px;
-}
 .third-nav{
   width: 35%;
   display: flex;
 }
-.search{
-  margin-top: 30px;
-  width:280px;
+.search-bar{
+  margin: 30px;
+  border: 1px solid black;
+  border-radius: 2cm;
 }
-.search input{
-  margin-left: 30px;
-  border: 3px solid white;
-  border-radius:2cm ;
-  width:200px;
+.search-bar input{
   height: 30px;
-  background: transparent;
+  width: 300px;
+  margin: 5px;
+  background-color: transparent;
+  outline: none;
 }
-.search input:focus{
-  border: none;
-  border: 5px solid rgb(2, 87, 136);
-}
-.search button{
-  border: none;
-  width: 30px;
-  height: 30px;
-  background: transparent;
-}
+
+
 
 /* caption_css */
 .home-container{
@@ -98,8 +90,14 @@
   font-weight: 800;
   font-size: 50px;
   letter-spacing: normal;
-  color: rgb(2, 87, 136);
+  color: rgb(255, 255, 255);
   /* color: rgb(15,41,76); */
+}
+.para p:hover{
+  cursor: pointer;
+  color:rgb(2, 87, 136) ;
+  background-color: rgba(255, 217, 1, 0.548);
+  transition: 2s;
 }
 .home-img{
   margin: 100px;
@@ -127,7 +125,7 @@
 .card a{
   padding-bottom: 20px;
 }
-.inputfield {
+/* .inputfield {
 	right: 0;
 	outline: none;
 	width: 60%;
@@ -143,8 +141,8 @@
 .inputfield:focus {
 	outline: none;
 	border-bottom: 2px solid #000;
-}
-button {
+} */
+#login-reg{
 	width: 75%;
 	margin: 10px 0;
 	padding: 10px;
@@ -157,19 +155,24 @@ button {
 	cursor: pointer;
 }
 
-button:hover {
+#login-reg:hover{
 	background-color: #61616144;
 	color: #ffffff;
 } 
 .line {
 	justify-content: space-between;
-	width: 75%;
+	width: 70%;
 	margin: 10px 0;
 	padding: 10px;
 	border-radius: 5px;
 	display: flex;
 }
-
+/* #standard-required{
+  margin-right: 150px;
+}
+#standard-adornment-password{
+  margin-right: 150px;
+}   */
 button:active {
 	background-color: #ffffff00;
 	color: #000;
@@ -196,3 +199,123 @@ a:active {
   height: 100vh;
 }
 
+/* dropdown */
+.menu-trigger img{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+  background-color: #fff;
+}
+
+.dropdown-menu{
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  background-color: #fff;
+  border-radius: var(--border-radius);
+  padding: 10px 20px;
+  width: 200px;
+  z-index: 1;
+}
+.menu-trigger img{
+  margin: 10px;
+}
+
+.dropdown-menu::before{
+  content: '';
+  position: absolute;
+  top: -5px;
+  right: 20px;
+  height: 20px;
+  width: 20px;
+  background: var(--secondary-bg);
+  transform: rotate(45deg);
+}
+
+.dropdown-menu.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) ease;
+}
+
+.dropdown-menu.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: var(--speed) ease;
+}
+.dropdown-menu ul li{
+  padding: 10px  0;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.dropdown-menu ul li:hover a{
+  color: rgb(212, 33, 9);
+  cursor: pointer;
+}
+
+.dropdown-menu ul li:hover img{
+  display: flex;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.dropdownItem{
+  display: flex;
+  margin: 10px auto;
+}
+
+/* .dropdownItem img{
+  max-width: 20px;
+  margin-right: 10px;
+  opacity: 0.5;
+  transition: var(--speed);
+} */
+
+#drop-down-link{
+  max-width: 100px;
+  margin-left: 10px;
+  transition: var(--speed);
+}
+.menu-trigger img{
+  height: 40px;
+  width: auto;
+  background: transparent;
+  border: 3px solid black;
+  border-radius: 50px;
+  margin-left: 20px;
+}
+
+.dd-flex a{
+  display: block;
+
+}
+
+#slider{
+  height: 75vh;
+  width: 100%;
+
+}
+.img-wrap{
+  position: relative;
+}
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+.para{
+  width: 30%;
+}
+.offer{
+  position: relative;
+  width: 80%;
+  margin-left:10% ;
+  bottom: 25px;
+}
