--- a/src/components/Book-Tickets/booktickets.css
+++ b/src/components/Book-Tickets/booktickets.css
@@ -1,6 +1,5 @@
 .top{
     padding: 20px;
-    height:80vh;
   margin: 0 auto;
   max-width: 1200px;
   display: flex;
@@ -48,7 +47,7 @@
     /* border-color: black; */
 }
 .ter h4{
-    margin-top: 2px;
+    margin-top: -2px;
 }
 .ticket{
 
@@ -71,5 +70,5 @@
     width:50px;
     color:white;
     font-weight:150;
-    background-color:#edbc40;
+    background-color:rgb(35,61,103);
 }
